# pymend

./: .pre-commit-config.yaml  README.rst  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  release.yaml  test-envs.yaml
docs/: conf.py  getting_started.rst  requirements.txt
docs/usage_and_configuration/: the_basics.rst
scripts/: regen_expected.py
src/pymend/: const.py  docstring_info.py  file_parser.py  files.py  option_groups.py  output.py  pymend.py  pymendapp.py  report.py
src/pymend/docstring_parser/: __init__.py  base_parser.py  common.py  epydoc.py  google.py  numpydoc.py  rest.py  util.py
tests/test_docstring_parser/: test_epydoc.py  test_google.py  test_numpydoc.py  test_parser.py  test_rest.py
tests/test_pymend/: test_app.py  test_docstring_info.py  test_epydocoutput.py  test_file_parser.py  test_force_docstrings_mode.py  test_force_option.py  test_googleoutput.py  test_issues.py  test_numpyoutput.py  test_pymend.py  test_resolve_type_name.py  test_restoutput.py  util.py
tests/test_pymend/refs/: ast_ref.py.patch.numpydoc.expected  attribute_classes.py  attribute_classes.py.patch.numpydoc.expected  blank_lines.py  blank_lines.py.patch.epydoc.expected  blank_lines.py.patch.google.expected  blank_lines.py.patch.rest.expected  blank_lines_force_multiline_blank.py.patch.epydoc.expected  blank_lines_force_multiline_blank.py.patch.google.expected  blank_lines_force_multiline_blank.py.patch.numpydoc.expected  blank_lines_force_multiline_blank.py.patch.rest.expected  class_body.py  class_body.py.patch.numpydoc.expected  example_order.py  example_order.py.patch.numpydoc.expected  except_handling.py  except_handling.py.patch.numpydoc.expected  except_star_handling.py  except_star_handling.py.patch.numpydoc.expected  existing_attribute_types.py  existing_attribute_types.py.patch.numpydoc.expected  existing_attribute_types_force.py.patch.numpydoc.expected  force_option.force.py.patch.epydoc.expected  force_option.force.py.patch.google.expected  force_option.force.py.patch.numpydoc.expected  force_option.force.py.patch.rest.expected  force_option.noforce.py.patch.epydoc.expected  force_option.noforce.py.patch.google.expected  force_option.noforce.py.patch.numpydoc.expected  force_option.noforce.py.patch.rest.expected  force_option.py  force_option.py.patch.force.numpydoc.expected  force_option.py.patch.noforce.numpydoc.expected  force_option.py.patch.unforce.numpydoc.expected  force_option.unforce.py.patch.epydoc.expected  force_option.unforce.py.patch.google.expected  force_option.unforce.py.patch.numpydoc.expected  force_option.unforce.py.patch.rest.expected  force_summary_blank_line.noforce.py.patch.numpydoc.expected  force_summary_blank_line.py  (+21 more)
